src/test/dev-workspace/src-readable/java/net/labymod/core/laby3d/opengl/error/generated/EXTFramebufferBlitLayers_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/EXTFramebufferBlitLayers_StringErrorContext.class */
public final class EXTFramebufferBlitLayers_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("glBlitFramebufferLayersEXT(IIIIIIIIII)V", "net/labymod/core/laby3d/opengl/error/generated/EXTFramebufferBlitLayersErrorContext");
        methods.put("glBlitFramebufferLayerEXT(IIIIIIIIIIII)V", "net/labymod/core/laby3d/opengl/error/generated/EXTFramebufferBlitLayersErrorContext");
        return methods;
    }
}
